Vue components: avoid viewport overflow
Why:
 - To avoid popover content from being cut outside of the viewport

What:
 - Compute the free space on the horizontal axis using
getBoundingClientRect on the popover slotted content and
set the popover max-width to the minimum value between
the original width and the available space.

Notes:
 - The computed width is not recalculated on window resize
events, seems unnecessary.

Bug: T339106

--- a/modules/vue-components/CScoreCards.less
+++ b/modules/vue-components/CScoreCards.less
@@ -12,7 +12,7 @@
 	}
 
 	&__scorecard__info {
-		width: 280px;
+		max-width: 280px;
 		margin-top: 0.5em;
 
 		&__icon {
